--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*.ts"],
+  "files": ["src/types/express.d.ts"]
 }
