--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "env-var": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "octokit": "^4.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
