--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/core": "^11.0.13",
     "@nestjs/platform-express": "^11.0.13",
     "@octokit/rest": "^21.1.1",
+    "@octokit/types": "^13.10.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
