--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nestjs/common": "^11.0.13",
     "@nestjs/core": "^11.0.13",
     "@nestjs/platform-express": "^11.0.13",
+    "@nestjs/platform-socket.io": "^11.0.20",
+    "@nestjs/websockets": "^11.0.20",
     "@octokit/rest": "^21.1.1",
     "@octokit/types": "^13.10.0",
     "@types/bcrypt": "^5.0.2",
