--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "env-var": "^7.5.0",
