--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "env-var": "^7.5.0",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
