--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "env-var": "^7.5.0",
+    "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
@@ -36,6 +37,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
