--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --env-file=.env --respawn --clear src/main.ts"
+    "dev": "tsnd --env-file=.env --respawn --clear src/main.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.13",
@@ -27,6 +28,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "env-var": "^7.5.0",
     "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
