--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^11.0.13",
     "@nestjs/core": "^11.0.13",
     "@nestjs/platform-express": "^11.0.13",
@@ -32,15 +33,18 @@
     "env-var": "^7.5.0",
     "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.14.0",
+    "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
